# MailChef

./: .dockerignore  .gitignore  README.md
backend/: .env.example  Dockerfile  fly.toml  pyproject.toml
backend/app/: config.py  llm.py  main.py  timeutil.py  util.py
backend/app/actions/: service.py  types.py
backend/app/auth/: api_auth.py  gmail_oauth.py
backend/app/classification/: categories.json  categories.py  classifier.py
backend/app/db/: database.py  models.py
backend/app/digest/: generator.py  pipeline.py  scheduler.py
backend/app/gmail/: client.py  sync.py
backend/app/jobs/: extractor.py  matcher.py  summary.py  types.py
backend/app/query/: answer.py  understand.py
backend/app/retrieval/: embeddings.py  fts.py  indexer.py  search.py  vectorstore.py
cli/: pyproject.toml
cli/mailchef_cli/: actions.py  client.py  config.py  main.py
docs/: SETUP.md
web/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.ts
web/src/: App.tsx  styles.css
web/src/api/: actions.ts  chatHistory.ts  client.ts  config.ts  types.ts
web/src/components/: Chat.tsx  ConfirmActionModal.tsx  Digest.tsx  EmailDetailModal.tsx  Jobs.tsx  Login.tsx  Search.tsx
web/src/util/: markdown.ts
