[project]
name = "mailchef-backend"
version = "0.1.0"
description = "MailChef backend: Gmail-connected email assistant API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlmodel>=0.0.22",
    "google-auth>=2.35",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.149",
    "cryptography>=43.0",
    "openai>=1.54",
    "chromadb>=0.5.20",
    "apscheduler>=3.10",
    "python-dateutil>=2.9",
]

[tool.setuptools.packages.find]
include = ["app*"]
