[project]
name = "mailchef-cli"
version = "0.1.0"
description = "MailChef CLI — thin client for the MailChef backend"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.13",
    "httpx>=0.27",
    "rich>=13.9",
]

[project.scripts]
mailchef = "mailchef_cli.main:main"

[tool.setuptools.packages.find]
include = ["mailchef_cli*"]
